# ai-atlas-nexus-extensions

./: README.md
extension-template/: cookiecutter.json
extension-template/{{cookiecutter.extension_repo_name}}/: pyproject.toml
ran-ares-integration/: pyproject.toml
ran-ares-integration/src/ran_ares_integration/: main.py  mapper.py
ran-ares-integration/src/ran_ares_integration/assets/: __init__.py
ran-ares-integration/src/ran_ares_integration/assets/knowledge_graph/: risk_to_ares_mappings.yaml
ran-ares-integration/src/ran_ares_integration/assets/mappings/: risk_to_ares_configs.yaml
ran-ares-integration/src/ran_ares_integration/utils/: data_utils.py  prompt_templates.py  riskares2linkml.py
ran-extension-template/: HOW_TO.md  README.md  pyproject.toml
ran-extension-template/src/ran_extension/: __init__.py
