[project]
name = "ran-extension"
authors = [
    { name = "AUTHOR_NAME", email = "AUTHOR_NAME@email.com" },
]
keywords = []
description = ""
dynamic = [
    "version",
    "readme",
]
requires-python = ">=3.11, <3.12.5"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = []

[tool.setuptools.dynamic]
version = { attr = "ran_extension.__version__" }
readme = { file = [
    "README.md",
], content-type = "text/markdown" }

[tool.setuptools.package-data]
mypkg = ["*.json", "*.yaml", ".svg"]

[tool.isort]
profile = "black"
line_length = 88
remove_redundant_aliases = true
group_by_package = true
combine_star = true
lines_after_imports = 2
